added save trajectories and expanding the user manual

--- a/user_manual/bib_myPTV.bib
+++ b/user_manual/bib_myPTV.bib
@@ -29,4 +29,28 @@
   Url                      = {https://link.springer.com/article/10.1007/BF00190953#citeas}
 }
 
+@Article{Bourgoin2020,
+  author    = {Bourgoin, M. and Huisman, S. G.},
+  journal   = {Review of scientific instruments},
+  title     = {Using ray-traversal for {3D} particle matching in the context of particle tracking velocimetry in fluid mechanics},
+  year      = {2020},
+  number    = {8},
+  pages     = {085105},
+  volume    = {91},
+  doi       = {https://doi.org/10.1063/5.0009357},
+  publisher = {AIP Publishing LLC},
+}
+
+@Article{Ouellette2006,
+  author    = {Ouellette, N. T. and Xu, H. and Bodenschatz, E.},
+  journal   = {Experiments in Fluids},
+  title     = {A quantitative study of three-dimensional {Lagrangian} particle tracking algorithms},
+  year      = {2006},
+  number    = {2},
+  pages     = {301--313},
+  volume    = {40},
+  doi       = {https://doi.org/10.1007/s00348-005-0068-7},
+  publisher = {Springer},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
