added the trajectory stitching to the user manual

--- a/user_manual/bib_myPTV.bib
+++ b/user_manual/bib_myPTV.bib
@@ -76,4 +76,16 @@
   publisher = {Cambridge University Press},
 }
 
+@Article{Xu2008,
+  author    = {Xu, Haitao},
+  journal   = {Measurement Science and Technology},
+  title     = {Tracking {Lagrangian} trajectories in position--velocity space},
+  year      = {2008},
+  number    = {7},
+  pages     = {075105},
+  volume    = {19},
+  doi       = {https://doi.org/10.1088/0957-0233/19/7/075105},
+  publisher = {IOP Publishing},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
